--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,26 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="side" menuId="side-menu" side="end">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title></ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item routerLink="/home">
+            <ion-button expand="full" fill="clear" shape="round" color="dark">
+              Atrás
+            </ion-button>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-item routerLink="/loginpage">
+          <ion-button (click)="cerrarSesion()" expand="full" fill="clear" shape="round" color="dark">
+            Cerrar Sesión
+          </ion-button>
+        </ion-item>
+      </ion-menu-toggle>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="side"></ion-router-outlet>
 </ion-app>
