--- a/src/app/components/encabezado/encabezado.component.html
+++ b/src/app/components/encabezado/encabezado.component.html
@@ -1,11 +1,12 @@
 <ion-header>
   <ion-toolbar class="animate__animated animate__fadeIn">
-    <ion-buttons slot="start">
-      <ion-menu-button menu="menuId"></ion-menu-button>
-    </ion-buttons>
     <ion-text slot="end" class="ion-text-capitalize">
-      <p>{{usuario || 'Anónimo'}}</p>
+      <p class="animate__animated animate__fadeIn">{{usuario || 'Anónimo'}}</p>
     </ion-text>
-    <ion-icon slot="end" name="person-circle-outline" class="ion-padding animate__animated animate__fadeIn" size="large"></ion-icon>
+    <ion-buttons slot="end" class="animate__animated animate__fadeIn">
+      <ion-menu-button menu="side-menu">
+        <ion-icon name="person-circle-outline"></ion-icon>
+      </ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
