--- a/src/app/pages/loginpage/loginpage.page.html
+++ b/src/app/pages/loginpage/loginpage.page.html
@@ -1,12 +1,10 @@
 <ion-header>
-  <ion-toolbar class="animate__animated animate__fadeIn">
-    <ion-title></ion-title>
-  </ion-toolbar>
+  
 </ion-header>
 
 <ion-content class="ion-padding">
   <ion-text color="primary" class="ion-text-center ion-text-capitalize animate__animated animate__fadeIn" color="dark">
-    <h1>DuocUC Asistencia</h1>
+    <h1 class="logo">RegistrAPP</h1>
     <h4>Iniciar Sesión</h4>
   </ion-text>
 <form #frm="ngForm" (ngSubmit)="onSubmit()" class="animate__animated animate__fadeIn">
@@ -19,7 +17,7 @@
     <ion-input required type="password" name="password" [(ngModel)]="usuario.password" clearInput></ion-input>
   </ion-item>
   <ion-button expand="block" color="dark" shape="round" type="submit" [disabled]="frm.invalid" class="ion-margin-top">
-    Login
+    Ingresar
   </ion-button>
   <ion-text color="dark" routerLink="/repassword">
     <h6>¿Has olvidado tu contraseña?</h6>
