--- a/src/app/pages/loginpage/loginpage.page.html
+++ b/src/app/pages/loginpage/loginpage.page.html
@@ -3,8 +3,8 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-text color="primary" class="ion-text-center ion-text-capitalize animate__animated animate__fadeIn" color="dark">
-    <h1 class="logo">RegistrAPP</h1>
+  <ion-text color="dark" class="ion-text-center ion-text-capitalize animate__animated animate__fadeIn" color="dark">
+    <h1 class="logo" color="dark">RegistrAPP</h1>
     <h4>Iniciar Sesión</h4>
   </ion-text>
 <form #frm="ngForm" (ngSubmit)="onSubmit()" class="animate__animated animate__fadeIn">
